; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_has_destructor.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_has_destructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symbol = type { i64, i64 }
%struct.lemon = type { i64, i64 }

@TERMINAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @has_destructor(%struct.symbol* %0, %struct.lemon* %1) #0 {
  %3 = alloca %struct.symbol*, align 8
  %4 = alloca %struct.lemon*, align 8
  %5 = alloca i32, align 4
  store %struct.symbol* %0, %struct.symbol** %3, align 8
  store %struct.lemon* %1, %struct.lemon** %4, align 8
  %6 = load %struct.symbol*, %struct.symbol** %3, align 8
  %7 = getelementptr inbounds %struct.symbol, %struct.symbol* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @TERMINAL, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load %struct.lemon*, %struct.lemon** %4, align 8
  %13 = getelementptr inbounds %struct.lemon, %struct.lemon* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %5, align 4
  br label %30

17:                                               ; preds = %2
  %18 = load %struct.lemon*, %struct.lemon** %4, align 8
  %19 = getelementptr inbounds %struct.lemon, %struct.lemon* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %27, label %22

22:                                               ; preds = %17
  %23 = load %struct.symbol*, %struct.symbol** %3, align 8
  %24 = getelementptr inbounds %struct.symbol, %struct.symbol* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %22, %17
  %28 = phi i1 [ true, %17 ], [ %26, %22 ]
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %27, %11
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
